[gd_scene load_steps=8 format=3 uid="uid://pj66keansg76"]

[ext_resource type="Script" uid="uid://cgxfdd1yww44d" path="res://Scripts/UI/dialogue_box.gd" id="1_c67c5"]
[ext_resource type="Texture2D" uid="uid://cf84u7gojmp88" path="res://Assets/UI/20250925_210919.png" id="1_qb1dv"]
[ext_resource type="FontFile" uid="uid://bjtoaaby76kjf" path="res://Assets/Texts/Cream Beige.otf" id="2_c67c5"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_obhul"]
texture = ExtResource("1_qb1dv")

[sub_resource type="LabelSettings" id="LabelSettings_c67c5"]
font = ExtResource("2_c67c5")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.15686275)
shadow_offset = Vector2(5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_0df3s"]
font = ExtResource("2_c67c5")
font_size = 60
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.15686275)
shadow_offset = Vector2(5, 0.5)

[sub_resource type="LabelSettings" id="LabelSettings_obhul"]
font = ExtResource("2_c67c5")
font_size = 40
outline_size = 10
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(0, 0, 0, 0.15686275)
shadow_offset = Vector2(5, 0.5)

[node name="DialogueBox" type="CanvasLayer"]
script = ExtResource("1_c67c5")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -255.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_obhul")

[node name="Content" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -831.0
offset_top = -66.5
offset_right = 824.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
text = "Hello World"
label_settings = SubResource("LabelSettings_c67c5")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_direction = 1

[node name="Name" type="Label" parent="Panel"]
layout_mode = 1
offset_left = 91.0
offset_top = -727.0
offset_right = 512.0
offset_bottom = -649.0
text = "Name"
label_settings = SubResource("LabelSettings_0df3s")
vertical_alignment = 1
text_direction = 1

[node name="Choice" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Accept" type="Button" parent="Choice"]
layout_mode = 0
offset_left = 1542.0
offset_top = 527.0
offset_right = 1819.0
offset_bottom = 623.0

[node name="Accept" type="Label" parent="Choice/Accept"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.5
offset_top = -30.0
offset_right = 88.5
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
text = "Accept"
label_settings = SubResource("LabelSettings_obhul")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_direction = 1

[node name="Deny" type="Button" parent="Choice"]
layout_mode = 0
offset_left = 1538.0
offset_top = 655.0
offset_right = 1815.0
offset_bottom = 751.0

[node name="Deny" type="Label" parent="Choice/Deny"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.5
offset_top = -25.0
offset_right = 83.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
text = "Deny"
label_settings = SubResource("LabelSettings_obhul")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
text_direction = 1

[connection signal="pressed" from="Choice/Accept" to="." method="_on_accept_pressed"]
[connection signal="pressed" from="Choice/Deny" to="." method="_on_deny_pressed"]
